tests/fixtures/type_checker/error/type_not_callable.galaxy
int call;

void main()
{
    call();
}
